# thatswhatsup

./: .gitignore  LICENSE  README.md
c/bytecode/: .gitignore  bytecode.c  bytecode_ext.pyx  make.sh  run_bytecode.py  schemec.py  setup_bytecode_ext.py  test_schemec.py
c/gc/: gc.c
c/os/: .gitignore  bochsrc.txt  build.sh  framebuffer.c  framebuffer.h  gdt.c  gdt.h  idt.c  idt.h  idt_asm.s  install.txt  io.h  io.s  kmain.c  link.ld  loader.s  menu.lst  run.sh  serial.c  serial.h
c/printf/: printf.c
c/quemos/: .gitignore  boot.asm  kmain.c  linker.ld  loader.asm  makefile  run.sh
c/tcpip/: .gitignore  arp.c  arp.h  compile.sh  headers.h  tapalloc.c  utils.c  utils.h
c/wayland/: README.md  connect.c  mak.sh
c/wayland/client/: .gitignore  client.c  client.h  connect.c  globalobj.c  input.c  mak.sh  meson.build  pseudoterm.c  surface.c  text.c
go/: .gitignore
go/schemec/: .gitignore  compiler.go  make.sh  run-assembly.c  tokenizer.go  tokenizer_test.go
gomod/code-mats/: WASHERE.md  connect.sh  create_table.sql  db-setup.sh  go.mod  go.sum  queries.sql
java/GetPossibleCombinationsOfCoins/: .gitignore  .project  LICENSE  README.md
java/SmipleJavaDataStructures/: .gitignore  .project  README.md
javascript/coinexchange/: coin-exchange.js
javascript/functional/: curryfun.js
javascript/interpreter/: egg.js
javascript/parseargv/: parseargv.js  parseargv.test.js
javascript/template-engine/: template.js
javascript/whatsthatvar/: esprima-identifier.js  package.json  test.js
python/bytecode/: bytecode.py
python/mymal/: core.py  env.py  mal_types.py  (+17 more)
(+70 files in other folders)
